# obsidian2hexo

./: .gitignore  README.md  pyproject.toml  setup.py
o2h/: isimage.py  o2h.py
src/o2h/: translator.py
