[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o2h"
version = "2.0.2"
description = "Publish obsidian to hexo github page"
readme = "README.md"
authors = [{ name = "Chivier Humber", email = "chivier.humber@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Chivier/H2O2H"

[project.scripts]
obs2hexo = "o2h.translator:o2h"
